# habit-tracker-app

./: .gitignore
.specs/: api.md  architecture.md  design-system.md  instructions.md  prd.md  schema.md  structure.md  ui.md  vision.md
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/components/: add-habit-sheet.tsx  delete-habit-dialog.tsx  edit-habit-dialog.tsx  empty-state.tsx  habit-card.tsx  habit-grid.tsx  streak-badge.tsx  weekly-heatmap.tsx
apps/web/hooks/: use-habits.ts  use-weekly.ts
apps/web/lib/: api.ts  types.ts  utils.ts
backend/: database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/routers/: completions.py  habits.py
backend/services/: habit_service.py  streak_service.py
backend/tests/: conftest.py  test_completions.py  test_habits.py  test_streaks.py
