[project]
name = "habit-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for habit tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
